k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: attack-workbench
  labels:
    name: attack-workbench
