k8s/base/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: attack-workbench-frontend
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/component: frontend
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/component: frontend
